# SDSS_Conformity_Analysis

./: .gitignore  .tmuxgo  LICENSE  Makefile  README.md  Synch_files.sh  environment.yml  setup.cfg  setup.py
docs/: Makefile  conf.py  getting-started.rst  index.rst  make.bat  methods.rst
docs/commands_files/: commands.rst
docs/getting_started_files/: Getting_Started_all.rst
docs/methods_files/: mcf.rst  quenched_fracs.rst
notebooks/: 1.0-VC-Cython-Function-Testing.ipynb  2.0-VC-Mark-Correlation-Function-Distributions-Testing.ipynb  3.0-VC-Quenched-Fractions-Testing_Distributions.ipynb
src/data/: download_dataset.py  path_variables.py
src/data/One_halo_conformity/: .gitignore  __init__.py  one_halo_conformity_quenched_fractions.py  one_halo_conformity_quenched_fractions_make.py  one_halo_conformity_quenched_fractions_plots.py  one_halo_mark_correlation.py  one_halo_mark_correlation_make.py  one_halo_mark_correlation_plots.py
src/data/One_halo_conformity/pair_counter/: __init__.py  build_module.sh  pair_counter_rp.pyx  setup.py
src/data/Two_halo_conformity/: .gitignore  path_variables.py  two_halo_conformity_quenched_fractions.py  two_halo_conformity_quenched_fractions_make.py  two_halo_conformity_quenched_fractions_plots.py  two_halo_mark_correlation.py  two_halo_mark_correlation_make.py  two_halo_mark_correlation_plots.py
src/data/referee_report_src/: Referee_Report_analysis.py  path_variables.py
src/data/utilities_python/: __init__.py  get_path.py  pandas_hdf5.py  sdss_catls_obs.py  web_utils.py
(+10 files in other folders)
