[metadata]
package_name = src
name         = SDSS_Conformity_Analysis 
description  = Repository for analyzing Galactic Conformity on SDSS DR7
author       = Victor Calderon
author_email = victor.calderon@vanderbilt.edu
license      = MIT
url          = https://github.com/vcalderon2009/SDSS_Conformity_Analysis
version      = 0.0.0dev